TECH-1650: Add JDK 11 JVM settings (#660)
* TECH-1650: Add JDK 11 JVM settings

* Escape % in JVM parameters