@@ -16,7 +16,21 @@ if "x%JAHIA_JAVA_OPTS%" == "x" (
 
 echo Using JVM options: "-Xms%JAHIA_JAVA_XMS% -Xmx%JAHIA_JAVA_XMX% %JAHIA_JAVA_OPTS%"
 
-set CATALINA_OPTS=%CATALINA_OPTS% -Dsun.io.useCanonCaches=false -server -Xms%JAHIA_JAVA_XMS% -Xmx%JAHIA_JAVA_XMX% -verbose:gc -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintConcurrentLocks -Djava.net.preferIPv4Stack=true -Djavax.el.class-resolution.disableOnLowerCase=true %JAHIA_JAVA_OPTS%
+set CATALINA_OPTS=%CATALINA_OPTS% -Dsun.io.useCanonCaches=false -server -Xms%JAHIA_JAVA_XMS% -Xmx%JAHIA_JAVA_XMX% -verbose:gc -Djava.net.preferIPv4Stack=true -Djavax.el.class-resolution.disableOnLowerCase=true
+
+:: GC settings
+set CATALINA_OPTS=%CATALINA_OPTS% -XX:+UseG1GC -XX:+DisableExplicitGC -XX:+UseStringDeduplication -XX:MaxTenuringThreshold=7
+set CATALINA_OPTS=%CATALINA_OPTS% -XX:+ParallelRefProcEnabled -XshowSettings:vm -XX:+UnlockDiagnosticVMOptions 
+set CATALINA_OPTS=%CATALINA_OPTS% -XX:GuaranteedSafepointInterval=0 -XX:-UseBiasedLocking -XX:+UseCountedLoopSafepoints -XX:LoopStripMiningIter=100
+set CATALINA_OPTS=%CATALINA_OPTS% -XX:+SafepointTimeout -XX:SafepointTimeoutDelay=1000
+
+:: Log/debug info
+set CATALINA_OPTS=%CATALINA_OPTS% -Xlog:gc*,gc+ref=debug,gc+heap=debug,gc+age=trace:file=gc-%%p-%%t.log:tags,uptime,time,level:filecount=10,filesize=20m
+set CATALINA_OPTS=%CATALINA_OPTS% -Xlog:os+container=debug,pagesize=debug:file=os-container-pagesize-%%p-%%t.log:tags,uptime,time,level:filecount=10,filesize=20m
+set CATALINA_OPTS=%CATALINA_OPTS% -Xlog:safepoint*:file=safepoints-%%p-%%t.log:tags,uptime,time,level:filecount=10,filesize=20m
+set CATALINA_OPTS=%CATALINA_OPTS% -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintConcurrentLocks
+set CATALINA_OPTS=%CATALINA_OPTS% %JAHIA_JAVA_OPTS%
+
 set CATALINA_OPTS=%CATALINA_OPTS% -Dderby.system.home="%{derby.home.win}"
 set CATALINA_OPTS=%CATALINA_OPTS% -Dlog4j2.formatMsgNoLookups=true
 set CATALINA_OPTS=%CATALINA_OPTS% -Djavax.xml.validation.SchemaFactory:http://www.w3.org/2001/XMLSchema=com.sun.org.apache.xerces.internal.jaxp.validation.XMLSchemaFactory -Djavax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl
